# gopreaux

./: LICENSE  README.md  pyproject.toml
data/: caat.csv
docs/: apidoc.rst  conf.py  index.rst  structure.rst  tutorials.rst
examples/: save_new_sn_to_caat.ipynb
src/caat/: CAAT.py  DataCube.py  Diagnostics.py  GP.py  GP3D.py  Kernels.py  Plot.py  SN.py  SNCollection.py  SNModel.py  utils.py
