[tool.poetry]
name = "caat"
version = "0.0.1"
description = "The Catalog of Archival Astronomical Transients"
authors = ["Craig Pellegrino, Tyler Pritchard, Adrian Crawford"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
numpy = "<2.0.0"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"
extinction = "^0.4.6"
astropy = "^6.1.2"
dustmaps = "^1.0.13"
sphinx-collections = "^0.3.1"
sphinxcontrib-mermaid = "^2.0.0"
mermaid-cli = "^0.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
nbsphinx = ">0.9.3"
sphinx = ">7.3.7"
sphinx_rtd_theme = ">2.0.0"
sphinx_astropy = ">1.9.1"
sphinx_automodapi = ">0.17.0"
pydata-sphinx-theme = ">0.15.4"
ruff = ">0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"